# apod-wallpaper

./: CMakeLists.txt  README.md
src/: ApodFetcher.cpp  ApodFetcher.h  ApodWallpaper.cpp  BackgroundChanger.cpp  BackgroundChanger.h  FsUtils.cpp  FsUtils.h  WindowController.cpp  WindowController.h
view/: style.css  view.ui
